# TRustAnsactions

./: Cargo.toml  README.md
data/: transactions.csv
frontend/: dashboard.js  file_uploader.js  index.html  input.css
src/: apis.rs  main.rs  models.rs
