[package]
name = "etrust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8.9", features = ["multipart"] }
chrono = "0.4.45"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
